[project]
name = "RexTools"
version = "0.0.5"
authors = [
  { name="Jack Spyvee", email="jackspyvee@comcast.net" },
]
description = "Python tools for creating OT2 scripts."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "opentrons >= 6.2.1",
  "pandas >= 2.1.2",
  "openpyxl >= 3.1.2",
  "aionotify @ git+https://github.com/drfragger/aionotify"
]

[project.urls]
"Homepage" = "https://github.com/drfragger/RexTools"
"Bug Tracker" = "https://github.com/drfragger/RexTools/issues"